--- a/CriminalIntent/res/layout/fragment_crime_camera.xml
+++ b/CriminalIntent/res/layout/fragment_crime_camera.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent" >
     
     <LinearLayout 
-        android:id="@+id/layout"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,6 +24,22 @@
             />
         
     </LinearLayout>
+    
+    <FrameLayout 
+        android:id="@+id/crime_camera_progressContainer"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:clickable="true"
+        >
+        
+        <ProgressBar 
+            style="@android:style/Widget.ProgressBar.Large"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            />
+        
+    </FrameLayout>
     
 
 </FrameLayout>
