--- a/CriminalIntent/res/menu-v11/fragment_crime_list.xml
+++ b/CriminalIntent/res/menu-v11/fragment_crime_list.xml
@@ -11,6 +11,6 @@
     <item 
         android:id="@+id/menu_item_show_subtitle"
         android:title="@string/show_subtitle"
-        android:showAsAction="ifRoom"
+        android:showAsAction="never"
         />
 </menu>
