--- a/CriminalIntent/res/layout/fragment_crime.xml
+++ b/CriminalIntent/res/layout/fragment_crime.xml
@@ -107,6 +107,25 @@
              />
 
      </LinearLayout>
+     
+     <Button 
+         android:id="@+id/crime_suspectButtion"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:layout_marginLeft="16dp"
+         android:layout_marginRight="16dp"
+         android:text="@string/crime_suspect_text"
+         
+         />
     
 
+      <Button 
+         android:id="@+id/crime_reportButtion"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:layout_marginLeft="16dp"
+         android:layout_marginRight="16dp"
+         android:text="@string/crime_report_text"
+         
+         />
 </LinearLayout>
